Kubernetes/netflix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: netflix.kerocam.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-app
                port:
                  number: 80
